# whispertune

./: README.md  main.py  pyproject.toml
config/: config.yaml  experiments.yaml
notebooks/: 01_synthetic_data_generation.ipynb  02_metrics_evaluation.ipynb  03_complete_pipeline.ipynb
src/eval/: evaluator.py
src/train/: trainer.py
src/utils/: metrics.py
src/whispertune/utils/: __init__.py
