[tool.poetry]
name = "whispertune"
version = "0.1.0"
description = "Fine-tuning Whisper for low-resource languages using synthetic data"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "whispertune", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.0.0"
transformers = "^4.30.0"
datasets = "^2.12.0"
torchaudio = "^2.0.0"
soundfile = "^0.12.1"
coqui-tts = "^0.14.0"
numpy = "^1.24.0"
wandb = "^0.15.0"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
jupyter = "^1.0.0"
black = "^23.1.0"
jupyter-black = "^0.3.1"
mypy = "^1.1.1"
isort = "^5.12.0"
pytest = "^7.2.2"
pytest-mock = "^3.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
